appId: uk.gov.govuk.dev

---

- scrollUntilVisible:
    element:
      text: "Benefits"
- tapOn:
    id: "toggle Benefits"

- scrollUntilVisible:
    element:
      text: "Business"
- tapOn:
    id: "toggle Business"

- scrollUntilVisible:
    element:
      text: "Care"
- tapOn:
    id: "toggle Care"

- scrollUntilVisible:
    element:
      text: "Driving and transport"
- tapOn:
    id: "toggle Driving and transport"

- scrollUntilVisible:
    element:
      text: "Employment"
- tapOn:
    id: "toggle Employment"

- scrollUntilVisible:
    element:
      text: "Health and disability"
- tapOn:
    id: "toggle Health and disability"

- scrollUntilVisible:
    element:
      text: "Money and tax"
- tapOn:
    id: "toggle Money and tax"

- scrollUntilVisible:
    element:
      text: "Parenting and guardianship"
- tapOn:
    id: "toggle Parenting and guardianship"

- scrollUntilVisible:
    element:
      text: "Retirement"
- tapOn:
    id: "toggle Retirement"

- scrollUntilVisible:
    element:
      text: "Studying and training"
- tapOn:
    id: "toggle Studying and training"

- scrollUntilVisible:
    element:
      text: "Travel abroad"
- tapOn:
    id: "toggle Travel abroad"
