appId: uk.gov.govuk.dev

---

- scrollUntilVisible:
    element:
      text: "Benefits.*"
- assertVisible: "Benefits.*"
- tapOn: "Benefits.*"

- scrollUntilVisible:
    element:
      text: "Driving and transport.*"
- assertVisible: "Driving and transport.*"
- tapOn: "Driving and transport.*"

- scrollUntilVisible:
    element:
      text: "Money and tax.*"
- assertVisible: "Money and tax.*"
- tapOn: "Money and tax.*"

- scrollUntilVisible:
    element:
      text: "Travel abroad.*"
- assertVisible: "Travel abroad.*"
- tapOn: "Travel abroad.*"

- tapOn: "Done"
